--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -78,11 +78,10 @@
     transition-property: all;
     transition-duration: 250ms;
     transition-timing-function: $--timing-function;
-}
-
-.button-list:hover,
-.button-list:focus {
-    color: white;
-    background: $--accent-color;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
+    &:hover,
+    &:focus {
+        color: white;
+        background: $--accent-color;
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
+    }
 }
