--- a/css/main.css
+++ b/css/main.css
@@ -282,18 +282,6 @@ main .text {
   transition: transform 250ms linear, -webkit-transform 250ms linear;
 }
 
-.form-coment {
-  width: 100%;
-  resize: none;
-  padding: 12px 0 0 16px;
-  cursor: pointer;
-  white-space: nowrap;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .form-textarea {
   position: absolute;
   top: 12px;
@@ -308,6 +296,18 @@ main .text {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.form-coment {
+  width: 100%;
+  resize: none;
+  padding: 12px 0 0 16px;
+  cursor: pointer;
+  white-space: nowrap;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .form-coment:focus + .form-textarea,
 .form-coment:not(:placeholder-shown) + .form-textarea {
   -webkit-transform: translateY(-35px);
@@ -315,8 +315,7 @@ main .text {
   color: #2196f3;
 }
 
-.form-coment:focus,
-.form-coment:not(:placeholder-shown) {
+.form-coment:focus, .form-coment:not(:placeholder-shown) {
   border-color: #2196f3;
   outline: none;
 }
@@ -593,7 +592,7 @@ main .text {
 }
 
 .erace :hover,
-:focus {
+.erace :focus {
   color: #2196f3;
 }
 
@@ -723,8 +722,7 @@ main .text {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.soc:focus,
-.soc:hover {
+.soc:focus, .soc:hover {
   background-color: #2196f3;
   fill: #ffffff;
 }
@@ -1242,11 +1240,6 @@ main .text {
   display: block;
 }
 
-.optic {
-  position: relative;
-  overflow: hidden;
-}
-
 .message {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1277,8 +1270,20 @@ main .text {
   margin: 0;
 }
 
+.card {
+  width: 370px;
+  height: 404px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  overflow: hidden;
+}
+
 .card:hover .message {
   opacity: 1;
+}
+
+.card:nth-child(3n) {
+  margin-right: 0px;
 }
 
 .overlays {
@@ -1296,6 +1301,11 @@ main .text {
           transform: translateY(100%);
 }
 
+.optic {
+  position: relative;
+  overflow: hidden;
+}
+
 .optic:hover .overlays {
   -webkit-transform: translateY(-290px);
           transform: translateY(-290px);
@@ -1303,18 +1313,6 @@ main .text {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.card {
-  width: 370px;
-  height: 404px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  overflow: hidden;
-}
-
-.card:nth-child(3n) {
-  margin-right: 0px;
 }
 
 .container-flex .card:nth-last-child(-n + 3) {
